--- a/ClientWebApp/ClientWebApp.csproj
+++ b/ClientWebApp/ClientWebApp.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Content Include="app\app.module.js" />
     <Content Include="app\main.js" />
+    <Content Include="app\main.service.js" />
     <Content Include="index.html" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular.js" />
